force-app/main/default/objects/Apex_Callout__c/Apex_Callout__c.object-meta.xml
<CustomObject>
    <description>Track all callouts from apex/ salesforce to third party services</description>
    <label>Apex Callout</label>
    <nameField>
        <displayFormat>CALL-{0000000}</displayFormat>
        <label>Apex Callout No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Apex Callouts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>