force-app/main/default/objects/Apex_Callout__c/fields/Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>Integration_Status__c</fullName>
    <defaultValue>&quot;Pending&quot;</defaultValue>
    <description>Pending = Newly created or failed callouts (less then or equal to n times)
Completed = Callout successfully completed
Failed = Callout failed (n times, no more retries)</description>
    <label>Integration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>