force-app/main/default/objects/Apex_Callout__c/fields/Max_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Max_Attempts__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Maximum retries for integration for this record.</description>
    <label>Max Attempts</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>