force-app/main/default/objects/Apex_Callout__c/fields/Module__c.field-meta.xml
<CustomField>
    <fullName>Module__c</fullName>
    <label>Module</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auspost Workforce Management Module</fullName>
            </value>
            <value>
                <fullName>X Module</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>