force-app/main/default/objects/Apex_Callout__c/fields/No_of_Attempts__c.field-meta.xml
<CustomField>
    <fullName>No_of_Attempts__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Define n number of attempts</description>
    <label>No of Attempts</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>