force-app/main/default/objects/Apex_Callout__c/fields/Record_Modified_By__c.field-meta.xml
<CustomField>
    <fullName>Record_Modified_By__c</fullName>
    <label>Record Modified By</label>
    <length>18</length>
    <type>Text</type>
</CustomField>